<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TicTacToe Game</string>
    <string name="action_settings">Settings</string>
    <string name="first_human">You go first.</string>
    <string name="turn_human">Your Turn..</string>
    <string name="turn_android">Android Turn..</string>
    <string name="turn_player_one">Player One\'s Turn.</string>
    <string name="turn_player_two">Player Two\'s Turn.</string>
    <string name="result_tie">its a tie..</string>
    <string name="result_human_win">You Won.</string>
    <string name="result_Android_win">Android Won.</string>
    <string name="result_player_one_wins">Player One Wins!</string>
    <string name="result_player_two_wins">Player Two Wins!</string>
    <string name="player_one">Player One:  </string>
    <string name="player_two">Player Two:  </string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="info">Information</string>
    
    <string name="human">Human:   </string>
    <string name="android">Android:   </string>
    <string name="ties">Ties:   </string>
    
    <string name="contact_heading">Contact Info</string>
    <string name="contact_info">
        <b>Name:</b> Ibrahim Ali Mohammed\n
        <b>Email:</b> ibrahimali966@yahoo.com\n
        <b>Phone:</b> 0238761229\n
        <b>FB:</b> https://www.facebook.com/ibrahem.ali.543\n
    </string>
    
   <string name="about_heading">About</string>
   <string name="about_info">This Application Allow You To Play
       Against The Android Device. The Rounda will rotate who gets to play first, Also
       the app will keep track and display the result of the Game</string>
</resources>
