<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_btn"
    android:orientation="vertical" >

    <TableLayout
        android:id="@+id/TableLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" >

            <Button
                android:id="@+id/button1"
                android:layout_width="90dp"
                android:layout_height="85dp"
                android:layout_marginLeft="20dp"
                android:text="@string/one"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="90dp"
                android:layout_height="85dp"
                android:text="@string/two"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="90dp"
                android:layout_height="85dp"
                android:text="@string/three"
                android:textSize="50sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button4"
                android:layout_width="90dp"
                android:layout_height="85dp"
                android:layout_marginLeft="20dp"
                android:text="@string/four"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="90dp"
                android:layout_height="85dp"
                android:text="@string/five"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="90dp"
                android:layout_height="85dp"
                android:text="@string/six"
                android:textSize="50sp" />
        </TableRow>

        <TableRow
            android:id="@+id/tableRow3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/button7"
                android:layout_width="90dp"
                android:layout_height="85dp"
                android:layout_marginLeft="20dp"
                android:text="@string/seven"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="90dp"
                android:layout_height="85dp"
                android:text="@string/eight"
                android:textSize="50sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="90dp"
                android:layout_height="85dp"
                android:text="@string/nine"
                android:textSize="50sp" />
        </TableRow>
    </TableLayout>

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TableLayout1"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center|center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/info"
        android:textSize="25sp" />

    <TableLayout
        android:id="@+id/TableLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInfo"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" >

        <TableRow
            android:id="@+id/tableRow4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:id="@+id/txtHuman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/human"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/hCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtTies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/ties"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/TCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtAndroid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/android"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/ACount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:textSize="20sp" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/buttonback"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="9dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/ic_b" />

    <Button
        android:id="@+id/buttonRestart"
        android:layout_width="70dp"
        android:layout_height="70dp" 
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="9dp"
        android:background="@drawable/ic_restart" />

</RelativeLayout>